# organize-home

./: flake.nix  pyproject.toml
src/organize_home/: main.py
