[tool.poetry]
name = "organize_home"
version = "0.1.0"
description = ""
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
organize-home = 'organize_home.main:main'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
target_version = ['py310']

#[[tool.mypy.overrides]]
#module = [
#]
#ignore_missing_imports = true

[tool.mypy]
strict = true

[tool.pylint.master]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 130
